Bug 201525 - Can't change color for Network graph
Summary: Can't change color for Network graph
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-26 09:43 UTC by gael07ol
Modified: 2009-07-28 23:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gael07ol 2009-07-26 09:43:26 UTC
Application that crashed: ksysguard
Version of the application: 4.2.98 (KDE 4.2.98 (KDE 4.3 RC3))
KDE Version: 4.2.98 (KDE 4.2.98 (KDE 4.3 RC3))
Qt Version: 4.5.2
Operating System: Linux 2.6.30.2-desktop-1mnb x86_64
Distribution: "Mandriva Linux 2009.1"

What I was doing when the application crashed:
I've made a right click on "Network graph" to change colors (l've done it succesfull for cpu and memory) but I can't...

 -- Backtrace:
Application: Surveillance du système (kdeinit4), signal: Aborted
[KCrash Handler]
#5  0x00007ff878496915 in raise () from /lib64/libc.so.6
#6  0x00007ff878497f8a in abort () from /lib64/libc.so.6
#7  0x00007ff87adb5124 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2042
#8  0x00007ff87adb5276 in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2241
#9  0x00007ff870593b5f in QList<SensorModelEntry>::operator[] (this=0x7fff9df52570, i=2) at /usr/lib/qt4/include/QtCore/qlist.h:403
#10 0x00007ff87059afba in FancyPlotter::applySettings (this=0x2753830) at /usr/src/debug/kdebase-workspace-4.2.98/ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:260
#11 0x00007ff87059b149 in FancyPlotter::qt_metacall (this=0x2753830, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/ksysguard/gui/FancyPlotter.moc:75
#12 0x00007ff87aebb952 in QMetaObject::activate (sender=0x2aa6b30, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3104
#13 0x00007ff8797faa2d in KDialog::slotButtonClicked () from /usr/lib64/libkdeui.so.5
#14 0x00007ff8797fcba6 in KDialog::qt_metacall () from /usr/lib64/libkdeui.so.5
#15 0x00007ff87989ba50 in KPageDialog::qt_metacall () from /usr/lib64/libkdeui.so.5
#16 0x00007ff87059ea80 in FancyPlotterSettings::qt_metacall (this=0x1f61, _c=8033, _id=6, _a=0xffffffffffffffff)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/ksysguard/gui/FancyPlotterSettings.moc:68
#17 0x00007ff87aebb952 in QMetaObject::activate (sender=0x2ad0d98, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3104
#18 0x00007ff87aebe56e in QSignalMapper::mapped (this=0x1f61, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:95
#19 0x00007ff87aebf760 in QSignalMapper::map (this=0x2ad0d98, sender=0x2722120) at kernel/qsignalmapper.cpp:266
#20 0x00007ff87aebf9d0 in QSignalMapper::qt_metacall (this=0x2ad0d98, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff9df52a50) at .moc/release-shared/moc_qsignalmapper.cpp:81
#21 0x00007ff87aebb952 in QMetaObject::activate (sender=0x2722120, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0xffffffffffffffff) at kernel/qobject.cpp:3104
#22 0x00007ff87926d9b7 in QAbstractButton::clicked (this=0x1f61, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#23 0x00007ff878fc9a8b in QAbstractButtonPrivate::emitClicked (this=0x2a99570) at widgets/qabstractbutton.cpp:543
#24 0x00007ff878fcb6e2 in QAbstractButtonPrivate::click (this=0x2a99570) at widgets/qabstractbutton.cpp:536
#25 0x00007ff878fcb935 in QAbstractButton::mouseReleaseEvent (this=0x2722120, e=0x7fff9df53190) at widgets/qabstractbutton.cpp:1115
#26 0x00007ff878caddef in QWidget::event (this=0x2722120, event=0x7fff9df53190) at kernel/qwidget.cpp:7549
#27 0x00007ff878c5e50c in QApplicationPrivate::notify_helper (this=0x232fa30, receiver=0x2722120, e=0x7fff9df53190) at kernel/qapplication.cpp:4056
#28 0x00007ff878c65ed1 in QApplication::notify (this=<value optimized out>, receiver=0x2722120, e=0x7fff9df53190) at kernel/qapplication.cpp:3758
#29 0x00007ff879874cde in KApplication::notify () from /usr/lib64/libkdeui.so.5
#30 0x00007ff87aea628c in QCoreApplication::notifyInternal (this=0x232f950, receiver=0x2722120, event=0x7fff9df53190) at kernel/qcoreapplication.cpp:610
#31 0x00007ff878c65110 in QApplicationPrivate::sendMouseEvent (receiver=0x2722120, event=0x7fff9df53190, alienWidget=0x2722120, nativeWidget=0x2aa6b30, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:216
#32 0x00007ff878ccc49e in QETWidget::translateMouseEvent (this=0x2aa6b30, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#33 0x00007ff878ccb4cf in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff9df54cc0) at kernel/qapplication_x11.cpp:3550
#34 0x00007ff878cf3b34 in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#35 0x00007ff877bb5bce in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#36 0x00007ff877bb9638 in ?? () from /usr/lib64/libglib-2.0.so.0
#37 0x00007ff877bb9780 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#38 0x00007ff87aecf376 in QEventDispatcherGlib::processEvents (this=0x2290080, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#39 0x00007ff878cf32de in QGuiEventDispatcherGlib::processEvents (this=0x1f61, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#40 0x00007ff87aea4b52 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#41 0x00007ff87aea4f2c in QEventLoop::exec (this=0x7fff9df54ff0, flags=) at kernel/qeventloop.cpp:201
#42 0x00007ff87aea7139 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#43 0x00007ff8705cb398 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.2.98/ksysguard/gui/ksysguard.cc:579
#44 0x0000000000406872 in _start ()

This bug may be a duplicate of or related to bug 196871

Reported using DrKonqi
Comment 1 Sebastien Martel 2009-07-28 17:37:14 UTC
Fix by commit of BasicSensor.cc revision 1003669.

BUG 201525:

Fix a bug when there was a sensor that was in a sgrd file but no longer available in ksysguardd we added a sensor with an empty name list and then crash when trying to access this list.
Comment 2 Sebastien Martel 2009-07-28 23:47:15 UTC
SVN commit 1003832 by smartel:

BUG: 201525

Fix a bug when there was a sensor that was in a sgrd file but no longer available in ksysguardd we added a sensor with an empty name list and then crash when trying to access this list.  This is actually the right file for this fix, the commit of BasicSensor.cc was a mistake as there was no diff.

 M  +1 -1      FancyPlotter.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1003832